External PT Sans

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 	<section class="slide slide_about">
 		<div class="title title_about">
-			<h1 class="title__head">About me</h1>
+			<h2 class="title__head">About me</h2>
 			<div class="title__delimeter">
 				<div class="title__gurt">
 					<span class="title__icon flaticon-man143"></span>
@@ -24,11 +24,11 @@
 			</div>
 		</div>
 		<div class="slide__text">
-			<h2>My work</h2>
+			<h3>My work</h3>
 
 			<p>In 2005 I began to work as a HTML-coder. In two years, as it usually happens with HTML-coders, I learned JavaScript and  devoted myself entirely to programming. Gradually I also learned a complete set of server technologies: programming languages (PHP, Python), databases (MySQL, PostreSQL), configuring servers and so on. You can get more information about my experience in <a href="">my&nbsp;cv</a>.</p>
 
-			<h2>My hobbies</h2>
+			<h3>My hobbies</h3>
 
 			<p>Web-development is not only <a href="">a job</a> for me, it’s my hobby as well. I regularly read a lot of thematic blogs, develop my own projects, and take part, as much as I can, in contributing of existing open source projects.</p>
 
@@ -36,7 +36,7 @@
 
 			<p>In my spare time I <a href="http://bibla.ru/albburtsev/">read books</a>, <a href="http://myshows.ru/albburtsev">watch TV shows</a> and improve my English. Also I'm a husband and a father.</p>
 
-			<h2>Education</h2>
+			<h3>Education</h3>
 
 			<p>Graduate of Moscow State University (Chemical department, 2001 — 2007). Yes, it's little strange, that <a href="http://istina.msu.ru/workers/1580266/">chemist</a> work as frontend-developer. But why not?</p>
 		</div>
@@ -44,14 +44,14 @@
 
 	<section class="slide">
 		<div class="title title_portfolio">
-			<h1 class="title__head">Portfolio</h1>
+			<h2 class="title__head">Portfolio</h2>
 			<div class="title__delimeter">
 				<div class="title__gurt">
 					<span class="title__icon flaticon-portfolio14"></span>
 				</div>
 			</div>
 		</div>
-		<div class="projects clearfix">
+		<div class="slide__text slide__text_free clearfix">
 			<a class="project" href="http://rememba.ru/">
 				<img class="project__image" src="static/i/screenshots/rememba1.min.png" alt="">
 				<span class="project__title">Rememba</span>
@@ -81,7 +81,7 @@
 
 	<section class="slide">
 		<div class="title title_resume">
-			<h1 class="title__head">Resume</h1>
+			<h2 class="title__head">Resume</h2>
 			<div class="title__delimeter">
 				<div class="title__gurt">
 					<span class="title__icon flaticon-curriculum"></span>
@@ -89,11 +89,11 @@
 			</div>
 		</div>
 		<div class="slide__text">
-			<h2>Skills</h2>
+			<h3>Skills</h3>
 
 			<p>Мне нравится находить применение современнным технологиям в своих проектах, не забывая о поддержке старых браузеров. Всю рутину в своей повседневной работе я стараюсь автоматизировать. Большую часть своего десятилетнего опыта я работал над frontend-частью проектов, хотя имею опыт backend-разработки.</p>
 
-			<h3>Frontend</h3>
+			<h4>Frontend</h4>
 
 			<ul>
 				<li><strong>JavaScript</strong>: Vanilla JS (ES3/5), CoffeeScript, jQuery, Backbone.js/Marionette.js, Require.js (AMD)</li>
@@ -101,10 +101,10 @@
 				<li><strong>CSS</strong>: CSS2/3, Stylus</li>
 			</ul>
 
-			<h3>Backend</h3>
+			<h4>Backend</h4>
 			<p>Python (Django, Tornado), PHP (Twig), Node.js (Express), Bash.</p>
 
-			<h3>Administration and databases</h3>
+			<h4>Administration and databases</h4>
 
 			<ul>
 				<li><strong>OS</strong>: CentOS, MacOS</li>
@@ -112,7 +112,7 @@
 				<li><strong>Сервера</strong>: Nginx, Apache</li>
 			</ul>
 
-			<h3>Misc</h3>
+			<h4>Misc</h4>
 
 			<ul>
 				<li><strong>Документация</strong>: JSDoc, DocStrap</li>
@@ -123,9 +123,9 @@
 				<li><strong>GIT</strong></li>
 			</ul>
 
-			<h2>Experience</h2>
+			<h3>Experience</h3>
 
-			<h3><a href="http://mail.ru/">Mail.Ru</a>: 2011 — 2014</h3>
+			<h4><a href="http://mail.ru/">Mail.Ru</a>: 2011 — 2014</h4>
 
 			<p>Руководитель группы разработки проекта [Карты@Mail.Ru](http://maps.mail.ru/).</p>
 
@@ -138,7 +138,7 @@
 				<li>Участие в обсуждении, проектировании и разработке большинства сервисов проекта Карты@Mail.Ru.</li>
 			</ul>
 
-			<h3><a href="http://mail.ru/">Mail.Ru</a>: 2006 — 2011</h3>
+			<h4><a href="http://mail.ru/">Mail.Ru</a>: 2006 — 2011</h4>
 
 			<p>JavaScript-разработчик контентных проектов Mail.Ru.</p>
 
@@ -149,11 +149,11 @@
 				<li>Рутинные задачи: валидаторы форм, аяксификаторы.</li>
 			</ul>
 
-			<h3><a href="http://mail.ru/">Mail.Ru</a>: 2005 — 2006</h3>
+			<h4><a href="http://mail.ru/">Mail.Ru</a>: 2005 — 2006</h4>
 
 			<p>HTML-верстальщик контентных проектов и почты.</p>
 
-			<h2>My projects</h2>
+			<h3>My projects</h3>
 
 			<p>jQuery-плагины:</p>
 
@@ -170,14 +170,14 @@
 
 	<section class="slide">
 		<div class="title title_contacts">
-			<h1 class="title__head">Contacts</h1>
+			<h2 class="title__head">Contacts</h2>
 			<div class="title__delimeter">
 				<div class="title__gurt">
 					<span class="title__icon flaticon-address14"></span>
 				</div>
 			</div>
 		</div>
-		<div class="slide__text">
+		<div class="slide__text slide__text_center slide__text_free">
 			<p>Most reliable way to contact with me is <a href="mailto:albburtsev@gmail.com">to write email</a> or add me in <a href="skype:albburtsev">skype</a>.</p>
 
 			<ul class="contacts">
