--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
 
 	<section class="slide slide_about">
 		<div class="title title_about">
-			<h2 class="title__head">About me</h2>
-			<div class="title__delimeter">
-				<div class="title__gurt">
-					<span class="title__icon flaticon-man143"></span>
-				</div>
+			<h2 class="title__head"><span class="title__text">About me</span></h2>
+			<div class="title__gurt" id="about">
+				<a href="#about" class="title__icon flaticon-man143"></a>
 			</div>
 		</div>
 		<div class="slide__text">
@@ -44,11 +42,9 @@
 
 	<section class="slide">
 		<div class="title title_portfolio">
-			<h2 class="title__head">Portfolio</h2>
-			<div class="title__delimeter">
-				<div class="title__gurt">
-					<span class="title__icon flaticon-portfolio14"></span>
-				</div>
+			<h2 class="title__head"><span class="title__text">Portfolio</span></h2>
+			<div class="title__gurt" id="portfolio">
+				<a href="#portfolio" class="title__icon flaticon-portfolio14"></a>
 			</div>
 		</div>
 		<div class="slide__text slide__text_free clearfix">
@@ -81,11 +77,9 @@
 
 	<section class="slide">
 		<div class="title title_resume">
-			<h2 class="title__head">Resume</h2>
-			<div class="title__delimeter">
-				<div class="title__gurt">
-					<span class="title__icon flaticon-curriculum"></span>
-				</div>
+			<h2 class="title__head"><span class="title__text">Resume</span></h2>
+			<div class="title__gurt" id="resume">
+				<a href="#resume" class="title__icon flaticon-curriculum"></a>
 			</div>
 		</div>
 		<div class="slide__text">
@@ -170,11 +164,9 @@
 
 	<section class="slide">
 		<div class="title title_contacts">
-			<h2 class="title__head">Contacts</h2>
-			<div class="title__delimeter">
-				<div class="title__gurt">
-					<span class="title__icon flaticon-address14"></span>
-				</div>
+			<h2 class="title__head"><span class="title__text">Contacts</span></h2>
+			<div class="title__gurt" id="contacts">
+				<a href="#contacts" class="title__icon flaticon-address14"></a>
 			</div>
 		</div>
 		<div class="slide__text slide__text_center slide__text_free">
