--- a/index.html
+++ b/index.html
@@ -238,16 +238,21 @@
 		</div>
 	</section>
 
-	<footer class="footer">
-		<h2 class="footer__head">Powered by</h2>
-		<ul class="footer__list">
-			<li class="footer__link"><a href="https://github.com/">Common sense</a></li>
+	<footer class="footer clearfix">
+		<div class="footer__copyright">&copy; Alexander Burtsev</div>
+		<h2 class="footer__head">
+			This page powered by 
+			<span class="footer__icon flaticon-list23 js-footer-icon"></span>
+		</h2>
+		<ul class="footer__list js-footer-list is-hidden">
+			<li class="footer__link"><a href="https://github.com/albburtsev/burtsev.me">Common sense</a></li>
 			<li class="footer__link"><a href="http://necolas.github.io/normalize.css/">Normilize.css</a></li>
 			<li class="footer__link"><a href="http://gruntjs.com/">Grunt</a></li>
 			<li class="footer__link"><a href="http://bower.io/">Bower</a></li>
 			<li class="footer__link"><a href="http://coffeescript.org/">CoffeeScript</a></li>
-			<li class="footer__link"><a href="http://modernizr.com/">Modernizr</a></li>
+			<li class="footer__link"><a href="http://learnboost.github.io/stylus/">Stylus</a></li>
 		</ul>
 	</footer>
+	<script src="build/build.js"></script>
 </body>
 </html>
