--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Alexander Burtsev: frontend-developer & traveler</title>
+	<title>Alexander Burtsev: frontend-developer &amp; traveler</title>
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<link rel="stylesheet" href="build/build.css">
 </head>
@@ -24,7 +24,7 @@
 		<div class="slide__text">
 			<h3>My work</h3>
 
-			<p>In 2005 I began to work as a HTML-coder. In two years, as it usually happens with HTML-coders, I learned JavaScript and  devoted myself entirely to programming. Gradually I also learned a complete set of server technologies: programming languages (PHP, Python), databases (MySQL, PostreSQL), configuring servers and so on. You can get more information about my experience in <a href="">my&nbsp;cv</a>.</p>
+			<p>In 2005 I began to work as an HTML-coder. In two years, as it usually happens with HTML-coders, I learned JavaScript and  devoted myself entirely to programming. Gradually I also learned a complete set of server technologies: programming languages (PHP, Python), databases (MySQL, PostreSQL), configuring servers and so on. You can get more information about my experience in <a href="">my&nbsp;cv</a>.</p>
 
 			<h3>My hobbies</h3>
 
@@ -36,7 +36,7 @@
 
 			<h3>Education</h3>
 
-			<p>Graduate of Moscow State University (Chemical department, 2001 — 2007). Yes, it's little strange, that <a href="http://istina.msu.ru/workers/1580266/">chemist</a> work as frontend-developer. But why not?</p>
+			<p>Graduate from Moscow State University (Chemical department, 2001 — 2007). Yes, it's little strange, that <a href="http://istina.msu.ru/workers/1580266/">chemist</a> work as frontend-developer, but why not?</p>
 		</div>
 	</section>
 
@@ -85,7 +85,7 @@
 		<div class="slide__text">
 			<h3>Skills</h3>
 
-			<p>Мне нравится находить применение современнным технологиям в своих проектах, не забывая о поддержке старых браузеров. Всю рутину в своей повседневной работе я стараюсь автоматизировать. Большую часть своего десятилетнего опыта я работал над frontend-частью проектов, хотя имею опыт backend-разработки.</p>
+			<p>Not forgetting about supporting old browsers, I like to find application for cutting-edge technologies. I try to automate all the routine in my daily work. Most of my 10-years experience I worked as frontend-developer, but I also have practice in backend-developing.</p>
 
 			<h4>Frontend</h4>
 
@@ -101,18 +101,18 @@
 			<h4>Administration and databases</h4>
 
 			<ul>
-				<li><strong>OS</strong>: CentOS, MacOS</li>
 				<li><strong>SQL</strong>: MySQL, PostreSQL</li>
-				<li><strong>Сервера</strong>: Nginx, Apache</li>
+				<li><strong>Servers</strong>: Nginx, Apache</li>
+				<li><strong>OS</strong>: CentOS, MacOS</li>
 			</ul>
 
 			<h4>Misc</h4>
 
 			<ul>
-				<li><strong>Документация</strong>: JSDoc, DocStrap</li>
-				<li><strong>Тестирование</strong>: qUnit, Mocha, CasperJS (PhantomCSS)</li>
-				<li><strong>Автоматизация разработки</strong>: Grunt, Gulp, Bower, Yeoman, Emmet</li>
-				<li><strong>Геоинформационные технологии</strong>: PostGIS, Leaflet.js</li>
+				<li><strong>Docs</strong>: JSDoc, DocStrap</li>
+				<li><strong>Testing</strong>: qUnit, Mocha, CasperJS (PhantomCSS)</li>
+				<li><strong>Automate</strong>: Grunt, Gulp, Bower, Yeoman, Emmet</li>
+				<li><strong>GIS</strong>: PostGIS, Leaflet.js</li>
 				<li><strong>IDE</strong>: SublimeText, WebStorm, Aptana</li>
 				<li><strong>GIT</strong></li>
 			</ul>
@@ -121,44 +121,44 @@
 
 			<h4><a href="http://mail.ru/">Mail.Ru</a>: 2011 — 2014</h4>
 
-			<p>Руководитель группы разработки проекта [Карты@Mail.Ru](http://maps.mail.ru/).</p>
+			<p>Team lead in maps.mail.ru. Project was closed in november 2014.</p>
 
 			<ul>
-				<li>Создание и поддержка JavaScript API Карт@Mail.Ru. Используется на портальных проектах Mail.Ru (сами Карты@Mail.Ru, Новости@Mail.Ru, Афиша@Mail.Ru и т.д.).  Первые две версии JS API разрабатывались «с нуля». В основу третьей (и последней) версии легла библиотека <a href="http://leafletjs.com">Leaflet</a>.</li>
-				<li>Веб-интерфейс всех разделов проекта Карты@Mail.ru (frontend+backend).</li>
-				<li>Карты метро, включая построение маршрутов (frontend+backend).</li>
-				<li>Подготовка к растеризации пробочных данных (backend).</li>
-				<li>Django-приложения для закрытых разделов проекта: документация, инструменты разработчиков и админка (backend).</li>
-				<li>Участие в обсуждении, проектировании и разработке большинства сервисов проекта Карты@Mail.Ru.</li>
+				<li>Development and support JavaScript API maps.mail.ru. It's have used in majority projects of Mail.Ru company. First two versions of JS API were developed from scratch. <a href="http://leafletjs.com/">Leaflet library</a> taken as the basis of the third (latest) version.</li>
+				<li>Web-interface of all parts of maps.mail.ru project (frontend+backend).</li>
+				<li>Subway maps, including route planner (frontend+backend).</li>
+				<li>Prepare traffic information before rasterization (backend).</li>
+				<li>Django-application for enclosed parts of the project: documentation, developer’s tools and admin zone. (backend).</li>
+				<li>Participation in discussion, software architecture and development of majority services of maps.mail.ru project.</li>
 			</ul>
 
 			<h4><a href="http://mail.ru/">Mail.Ru</a>: 2006 — 2011</h4>
 
-			<p>JavaScript-разработчик контентных проектов Mail.Ru.</p>
+			<p>JavaScript-developer of content projects Mail.Ru.</p>
 
 			<ul>
-				<li>UI-элементы портальных проектов: слайдеры, трекбары, выпадушки и многое другое.</li>
-				<li>WYSIWIG-редакторы для почты и контентных проектов.</li>
-				<li>AJAX-почта pro.mail.ru.</li>
-				<li>Рутинные задачи: валидаторы форм, аяксификаторы.</li>
+				<li>UI of portal projects: sliders, different controls, dropdowns etc.</li>
+				<li>WYSIWIG-editor for mail service and content projects.</li>
+				<li>AJAX-version of mail service: pro.mail.ru.</li>
+				<li>Routine tasks: form’s validators and etc.</li>
 			</ul>
 
 			<h4><a href="http://mail.ru/">Mail.Ru</a>: 2005 — 2006</h4>
 
-			<p>HTML-верстальщик контентных проектов и почты.</p>
+			<p>HTML-coder in content projects and mail service.</p>
 
 			<h3>My projects</h3>
 
-			<p>jQuery-плагины:</p>
+			<p>I'm one of the frontend-developers in project <a href="http://rememba.ru/">rememba.ru</a>.</p>
+
+			<p>jQuery-plugins:</p>
 
 			<ul>
-				<li><a href="https://github.com/albburtsev/jquery.lookingfor">jquery.lookingfor</a> – клиентский поиск;</li>
-				<li><a href="https://github.com/albburtsev/jquery.typist">jquery.typist</a> – имитация печати текста.</li>
+				<li><a href="https://github.com/albburtsev/jquery.lookingfor">jquery.lookingfor</a> – fast search as you type jQuery-plugin;</li>
+				<li><a href="https://github.com/albburtsev/jquery.typist">jquery.typist</a> – animated text typing.</li>
 			</ul>
 
-			<p>Разработал собственную CMS на PHP – <a href="http://cms-correct.ru/">Correct</a>. Проект создавался для быстрого развертывания простых сайтов типа «каталог» с удобной админкой.</p>
-
-			<p>Также я работаю в составе группы frontend-разработчиков проекта <a href="http://rememba.ru/">rememba.ru</a>.</p>
+			<p>I have developed <a href="http://cms-correct.ru/">CMS Correct</a> (PHP/Twig/MySQL). Project was created as a simple tool for deployment web-shops and catalogs.</p>
 		</div>
 	</section>
 
@@ -174,13 +174,13 @@
 
 			<ul class="contacts">
 				<li class="contact">
-					<a href="tel:+79160064854">
-						<span class="contact__icon flaticon-phone72"></span>+7 (916) 006-48-54
+					<a href="mailto:albburtsev@gmail.com">
+						<span class="contact__icon flaticon-email6"></span>albburtsev@gmail.com
 					</a>
 				</li>
 				<li class="contact">
-					<a href="mailto:albburtsev@gmail.com">
-						<span class="contact__icon flaticon-email6"></span>albburtsev@gmail.com
+					<a href="tel:+79160064854">
+						<span class="contact__icon flaticon-phone72"></span>+7 (916) 006-48-54
 					</a>
 				</li>
 				<li class="contact">
@@ -192,31 +192,26 @@
 				<li class="contact_delim"></li>
 
 				<li class="contact">
-					<a href="https://github.com/albburtsev">
-						<span class="contact__icon flaticon-github13"></span>Github
+					<a href="http://habrahabr.ru/users/bur/">
+						<span class="contact__icon flaticon-hotel75"></span>Habrahabr
 					</a>
 				</li>
 				<li class="contact">
-					<a href="http://habrahabr.ru/users/bur/">
-						<span class="contact__icon flaticon-hotel75"></span>Habrahabr
+					<a href="https://github.com/albburtsev">
+						<span class="contact__icon flaticon-github13"></span>Github
 					</a>
 				</li>
 
 				<li class="contact_delim"></li>
 
 				<li class="contact">
-					<a href="https://www.facebook.com/albburtsev">
-						<span class="contact__icon flaticon-facebook29"></span>Facebook
-					</a>
-				</li>
-				<li class="contact">
-					<a href="https://twitter.com/albburtsev">
-						<span class="contact__icon flaticon-social19"></span>Twitter
-					</a>
-				</li>
-				<li class="contact">
 					<a href="https://foursquare.com/user/46356854">
 						<span class="contact__icon flaticon-check59"></span>Foursquare
+					</a>
+				</li>
+				<li class="contact">
+					<a href="https://www.facebook.com/albburtsev">
+						<span class="contact__icon flaticon-facebook29"></span>Facebook
 					</a>
 				</li>
 				<li class="contact">
@@ -225,13 +220,18 @@
 					</a>
 				</li>
 				<li class="contact">
+					<a href="http://www.youtube.com/user/albburtsev">
+						<span class="contact__icon flaticon-youtube17"></span>Youtube+
+					</a>
+				</li>
+				<li class="contact">
 					<a href="https://plus.google.com/u/0/112730589178585282928/posts">
 						<span class="contact__icon flaticon-social5"></span>Google+
 					</a>
 				</li>
 				<li class="contact">
-					<a href="http://www.youtube.com/user/albburtsev">
-						<span class="contact__icon flaticon-youtube17"></span>Youtube+
+					<a href="https://twitter.com/albburtsev">
+						<span class="contact__icon flaticon-social19"></span>Twitter
 					</a>
 				</li>
 			</ul>
