--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 			<h3>Education</h3>
 
-			<p>Graduate from Moscow State University (Chemical department, 2001 — 2007). Yes, it's little strange, that <a href="http://istina.msu.ru/workers/1580266/">chemist</a> work as frontend-developer, but why not?</p>
+			<p>I graduated from Moscow State University (Chemical department, 2001 — 2007). Yes, it's little strange, that <a href="http://istina.msu.ru/workers/1580266/">chemist</a> work as frontend-developer, but why not?</p>
 		</div>
 	</section>
 
