Spell checking again

--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
 		<div class="slide__text">
 			<h3>My work</h3>
 
-			<p>In 2005 I began to work as an HTML-coder. In two years, as it usually happens with HTML-coders, I learned JavaScript and  devoted myself entirely to programming. Gradually I also learned a complete set of server technologies: programming languages (PHP, Python), databases (MySQL, PostreSQL), configuring servers and so on. You can get more information about my experience in <a href="">my&nbsp;cv</a>.</p>
+			<p>I began working as an HTML coder in 2005 . In two years, as it usually happens with HTML coders, I learned JavaScript and  devoted myself entirely to programming. Gradually I also learned a complete set of server technologies: programming languages (PHP, Python), databases (MySQL, PostreSQL), configuring servers and so on. You can get more information about my experience in <a href="#resume">my&nbsp;CV</a>.</p>
 
 			<h3>My hobbies</h3>
 
-			<p>Web-development is not only <a href="">a job</a> for me, it’s my hobby as well. I regularly read a lot of thematic blogs, develop my own projects, and take part, as much as I can, in contributing of existing open source projects.</p>
+			<p>Web development is not only <a href="">a job</a> for me, it’s my hobby as well. I regularly read a lot of thematic blogs, develop my own projects and contribute to open source projects.</p>
 
-			<p>Besides I like to travel. By car, on foot, by plane or by train, across Russia and abroad, in a tent or in a hotel — it doesn't matter. The main thing is to get pleasure from all stages: from planning the trip to returning home in wet boots and with a torn backpack :-)</p>
+			<p>Besides, I like to travel. By car, on foot, by plane or by train, across Russia and abroad, in a tent or in a hotel — it doesn't matter. The main thing is to get pleasure from all stages: from planning the trip to returning home in wet boots and with a torn backpack.</p>
 
 			<p>In my spare time I <a href="http://bibla.ru/albburtsev/">read books</a>, <a href="http://myshows.ru/albburtsev">watch TV shows</a> and improve my English. Also I'm a husband and a father.</p>
 
 			<h3>Education</h3>
 
-			<p>I graduated from Moscow State University (Chemical department, 2001 — 2007). Yes, it's little strange, that <a href="http://istina.msu.ru/workers/1580266/">chemist</a> work as frontend-developer, but why not?</p>
+			<p>I <a href="http://istina.msu.ru/workers/1580266/">graduated</a> from Moscow State University (Chemical department, 2001 — 2007).
 		</div>
 	</section>
 
@@ -85,7 +85,7 @@
 		<div class="slide__text">
 			<h3>Skills</h3>
 
-			<p>Not forgetting about supporting old browsers, I like to find application for cutting-edge technologies. I try to automate all the routine in my daily work. Most of my 10-years experience I worked as frontend-developer, but I also have practice in backend-developing.</p>
+			<p>Not forgetting about supporting old browsers, I like to find application for cutting-edge technologies. I try automating all the routine in my daily work. In my 10 year experience I worked as frontend-developer, but I also have practice in backend developing.</p>
 
 			<h4>Frontend</h4>
 
@@ -121,15 +121,15 @@
 
 			<h4><a href="http://mail.ru/">Mail.Ru</a>: 2011 — 2014</h4>
 
-			<p>Team lead in maps.mail.ru. Project was closed in november 2014.</p>
+			<p>Team lead in maps.mail.ru.</p>
 
 			<ul>
-				<li>Development and support JavaScript API maps.mail.ru. It's have used in majority projects of Mail.Ru company. First two versions of JS API were developed from scratch. <a href="http://leafletjs.com/">Leaflet library</a> taken as the basis of the third (latest) version.</li>
-				<li>Web-interface of all parts of maps.mail.ru project (frontend+backend).</li>
-				<li>Subway maps, including route planner (frontend+backend).</li>
+				<li>Development and support of JavaScript API maps.mail.ru. It's have used in majority projects of the Mail.Ru company. First two versions of JS API were developed from scratch. <a href="http://leafletjs.com/">Leaflet library</a> is taken as the basis of the third (latest) version.</li>
+				<li>Web interface development of the maps.mail.ru project (frontend+backend).</li>
+				<li>Development of subway maps, including route planner (frontend+backend).</li>
 				<li>Prepare traffic information before rasterization (backend).</li>
-				<li>Django-application for enclosed parts of the project: documentation, developer’s tools and admin zone. (backend).</li>
-				<li>Participation in discussion, software architecture and development of majority services of maps.mail.ru project.</li>
+				<li>Django application for enclosed parts of the project: documentation, developer’s tools and admin zone. (backend).</li>
+				<li>Supervised the developers team and organized the design and development process.</li>
 			</ul>
 
 			<h4><a href="http://mail.ru/">Mail.Ru</a>: 2006 — 2011</h4>
@@ -145,7 +145,7 @@
 
 			<h4><a href="http://mail.ru/">Mail.Ru</a>: 2005 — 2006</h4>
 
-			<p>HTML-coder in content projects and mail service.</p>
+			<p>HTML coder in content projects and mail service.</p>
 
 			<h3>My projects</h3>
 
@@ -158,7 +158,7 @@
 				<li><a href="https://github.com/albburtsev/jquery.typist">jquery.typist</a> – animated text typing.</li>
 			</ul>
 
-			<p>I have developed <a href="http://cms-correct.ru/">CMS Correct</a> (PHP/Twig/MySQL). Project was created as a simple tool for deployment web-shops and catalogs.</p>
+			<p>I have developed <a href="http://cms-correct.ru/">CMS Correct</a> (PHP/Twig/MySQL). Project was created as a simple tool for deployment of online shops and catalogs.</p>
 		</div>
 	</section>
 
@@ -170,7 +170,7 @@
 			</div>
 		</div>
 		<div class="slide__text slide__text_center slide__text_free">
-			<p>Most reliable way to contact with me is <a href="mailto:albburtsev@gmail.com">to write email</a> or add me in <a href="skype:albburtsev">skype</a>.</p>
+			<p>The best way to contact me is <a href="mailto:albburtsev@gmail.com">to write me at email</a> or <a href="skype:albburtsev">add me in Skype</a>.</p>
 
 			<ul class="contacts">
 				<li class="contact">
