Improvements from Anton

--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
 
 	<section class="slide slide_about">
 		<div class="title title_about">
-			<h2 class="title__head"><span class="title__text">About me</span></h2>
-			<div class="title__gurt" id="about">
-				<a href="#about" class="title__icon flaticon-man143"></a>
+			<div class="title__wrapper">
+				<div class="title__gurt" id="about">
+					<span class="title__icon flaticon-man143"></span>
+				</div>
 			</div>
+			<h2 class="title__head">About me</h2>
 		</div>
-		<div class="slide__text">
+		<div class="slide__text typograph">
 			<h3>My work</h3>
 
 			<p>I began working as an HTML coder in 2005 . In two years, as it usually happens with HTML coders, I learned JavaScript and  devoted myself entirely to programming. Gradually I also learned a complete set of server technologies: programming languages (PHP, Python), databases (MySQL, PostreSQL), configuring servers and so on. You can get more information about my experience in <a href="#resume">my&nbsp;CV</a>.</p>
@@ -42,10 +44,12 @@
 
 	<section class="slide">
 		<div class="title title_portfolio">
-			<h2 class="title__head"><span class="title__text">Portfolio</span></h2>
-			<div class="title__gurt" id="portfolio">
-				<a href="#portfolio" class="title__icon flaticon-portfolio14"></a>
+			<div class="title__wrapper">
+				<div class="title__gurt" id="portfolio">
+					<span class="title__icon flaticon-portfolio14"></span>
+				</div>
 			</div>
+			<h2 class="title__head">Portfolio</h2>
 		</div>
 		<div class="slide__text slide__text_free clearfix">
 			<a class="project" href="http://rememba.ru/">
@@ -77,12 +81,14 @@
 
 	<section class="slide">
 		<div class="title title_resume">
-			<h2 class="title__head"><span class="title__text">Resume</span></h2>
-			<div class="title__gurt" id="resume">
-				<a href="#resume" class="title__icon flaticon-curriculum"></a>
+			<div class="title__wrapper">
+				<div class="title__gurt" id="resume">
+					<span class="title__icon flaticon-curriculum"></span>
+				</div>
 			</div>
+			<h2 class="title__head">Resume</h2>
 		</div>
-		<div class="slide__text">
+		<div class="slide__text typograph">
 			<h3>Skills</h3>
 
 			<p>Not forgetting about supporting old browsers, I like to find application for cutting-edge technologies. I try automating all the routine in my daily work. In my 10 year experience I worked as frontend-developer, but I also have practice in backend developing.</p>
@@ -164,12 +170,14 @@
 
 	<section class="slide">
 		<div class="title title_contacts">
-			<h2 class="title__head"><span class="title__text">Contacts</span></h2>
-			<div class="title__gurt" id="contacts">
-				<a href="#contacts" class="title__icon flaticon-address14"></a>
+			<div class="title__wrapper">
+				<div class="title__gurt" id="contacts">
+					<span class="title__icon flaticon-address14"></span>
+				</div>
 			</div>
+			<h2 class="title__head">Contacts</h2>
 		</div>
-		<div class="slide__text slide__text_center slide__text_free">
+		<div class="slide__text slide__text_free">
 			<p>The best way to contact me is <a href="mailto:albburtsev@gmail.com">to write me at email</a> or <a href="skype:albburtsev">add me in Skype</a>.</p>
 
 			<ul class="contacts">
@@ -246,11 +254,10 @@
 		</h2>
 		<ul class="footer__list js-footer-list is-hidden">
 			<li class="footer__link"><a href="https://github.com/albburtsev/burtsev.me">Common sense</a></li>
-			<li class="footer__link"><a href="http://necolas.github.io/normalize.css/">Normilize.css</a></li>
-			<li class="footer__link"><a href="http://gruntjs.com/">Grunt</a></li>
-			<li class="footer__link"><a href="http://bower.io/">Bower</a></li>
 			<li class="footer__link"><a href="http://coffeescript.org/">CoffeeScript</a></li>
 			<li class="footer__link"><a href="http://learnboost.github.io/stylus/">Stylus</a></li>
+			<li class="footer__link"><a href="http://gruntjs.com/">Grunt</a></li>
+			<li class="footer__link"><a href="http://bower.io/">Bower</a></li>
 		</ul>
 	</footer>
 	<script src="build/build.js"></script>
