Uglify for compliled JavaScript

--- a/index.html
+++ b/index.html
@@ -260,6 +260,6 @@
 			<li class="footer__link"><a href="http://bower.io/">Bower</a></li>
 		</ul>
 	</footer>
-	<script src="build/build.js"></script>
+	<script src="build/build.min.js"></script>
 </body>
 </html>
