PT Serif as default font

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 			<h3>My hobbies</h3>
 
-			<p>Web development is not only <a href="">a job</a> for me, it’s my hobby as well. I regularly read a lot of thematic blogs, develop my own projects and contribute to open source projects.</p>
+			<p>Web development is not only a job for me, it’s my hobby as well. I regularly read a lot of thematic blogs, develop my own projects and contribute to open source projects.</p>
 
 			<p>Besides, I like to travel. By car, on foot, by plane or by train, across Russia and abroad, in a tent or in a hotel — it doesn't matter. The main thing is to get pleasure from all stages: from planning the trip to returning home in wet boots and with a torn backpack.</p>
 
