Router with History API

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<a class="mainmenu__item mainmenu__item_contacts" href="#contacts">Contacts</a>
 	</nav>
 	<header class="jumbotron">
-		<h1 class="jumbotron__name">Alexander Burtsev</h1>
+		<h1 class="jumbotron__name"><a href="/">Alexander Burtsev</a></h1>
 		<p class="jumbotron__desc">Frontend-developer &amp; traveler</p>
 	</header>
 
