--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 		<p class="jumbotron__desc">Frontend-developer &amp; traveler</p>
 	</header>
 
-	<section class="slide slide_about">
+	<section class="slide slide_about" data-slide="about">
 		<div class="title title_about js-rubicon">
 			<div class="title__wrapper">
 				<div class="title__gurt">
 					<span class="title__icon flaticon-man143"></span>
 				</div>
 			</div>
-			<h2 class="title__head" id="about" data-slide="on">About me</h2>
+			<h2 class="title__head" id="about">About me</h2>
 		</div>
 		<div class="slide__text typograph">
 			<h3>My work</h3>
@@ -48,14 +48,14 @@
 		</div>
 	</section>
 
-	<section class="slide">
+	<section class="slide" data-slide="portfolio">
 		<div class="title title_portfolio">
 			<div class="title__wrapper">
 				<div class="title__gurt">
 					<span class="title__icon flaticon-portfolio14"></span>
 				</div>
 			</div>
-			<h2 class="title__head" id="portfolio" data-slide="on">Portfolio</h2>
+			<h2 class="title__head" id="portfolio">Portfolio</h2>
 		</div>
 		<div class="slide__text slide__text_free clearfix">
 			<a class="project" href="http://rememba.ru/">
@@ -85,14 +85,14 @@
 		</div>
 	</section>
 
-	<section class="slide">
+	<section class="slide" data-slide="resume">
 		<div class="title title_resume">
 			<div class="title__wrapper">
 				<div class="title__gurt">
 					<span class="title__icon flaticon-curriculum"></span>
 				</div>
 			</div>
-			<h2 class="title__head" id="resume" data-slide="on">Resume</h2>
+			<h2 class="title__head" id="resume">Resume</h2>
 		</div>
 		<div class="slide__text typograph">
 			<h3>Skills</h3>
@@ -174,14 +174,14 @@
 		</div>
 	</section>
 
-	<section class="slide">
+	<section class="slide" data-slide="contacts">
 		<div class="title title_contacts">
 			<div class="title__wrapper">
 				<div class="title__gurt">
 					<span class="title__icon flaticon-address14"></span>
 				</div>
 			</div>
-			<h2 class="title__head" id="contacts" data-slide="on">Contacts</h2>
+			<h2 class="title__head" id="contacts">Contacts</h2>
 		</div>
 		<div class="slide__text slide__text_free">
 			<p>The best way to contact me is <a href="mailto:albburtsev@gmail.com">to write me at email</a> or <a href="skype:albburtsev">add me in Skype</a>.</p>
