--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			<h2 class="title__head" id="portfolio">Portfolio</h2>
 		</div>
 		<div class="slide__text slide__text_free clearfix">
-			<a class="project" href="http://rememba.ru/">
+			<a class="project" href="http://rememba.ru/" target="_blank">
 				<img class="project__image" src="static/i/screenshots/rememba1.min.png" alt="">
 				<span class="project__title">Rememba</span>
 				<span class="project__shutter dark">
@@ -71,7 +71,7 @@
 					My contribution: frontend code of application (Backbone/Marionette) and tests (CasperJS/PhantonCSS).
 				</span>
 			</a>
-			<a class="project" href="http://edox.ru/">
+			<a class="project" href="http://edox.ru/" target="_blank">
 				<img class="project__image" src="static/i/screenshots/edox2.min.png" alt="">
 				<span class="project__title">Edox Russia</span>
 				<span class="project__shutter dark">
@@ -79,7 +79,7 @@
 					My contribution: frontend (HTML/CSS, jQuery) and backend (CMS Correct).
 				</span>
 			</a>
-			<a class="project" href="http://www.gcwatches.ru/">
+			<a class="project" href="http://www.gcwatches.ru/" target="_blank">
 				<img class="project__image" src="static/i/screenshots/gc1.min.png" alt="">
 				<span class="project__title">GC Watches</span>
 				<span class="project__shutter dark">
@@ -212,12 +212,14 @@
 
 				<li class="contact">
 					<a href="http://habrahabr.ru/users/bur/">
-						<span class="contact__icon flaticon-hotel75"></span>Habrahabr
+						<span class="contact__icon flaticon-hotel75"></span><span class="is-no-print">Habrahabr</span>
+						<span class="is-no-screen">http://habrahabr.ru/users/bur/</span>
 					</a>
 				</li>
 				<li class="contact">
 					<a href="https://github.com/albburtsev">
-						<span class="contact__icon flaticon-github13"></span>Github
+						<span class="contact__icon flaticon-github13"></span><span class="is-no-print">Github</span>
+						<span class="is-no-screen">https://github.com/albburtsev</span>
 					</a>
 				</li>
 
@@ -225,32 +227,37 @@
 
 				<li class="contact">
 					<a href="https://foursquare.com/user/46356854">
-						<span class="contact__icon flaticon-check59"></span>Foursquare
+						<span class="contact__icon flaticon-check59"></span><span class="is-no-print">Foursquare</span>
+						<span class="is-no-screen">https://foursquare.com/user/46356854</span>
 					</a>
 				</li>
 				<li class="contact">
 					<a href="https://www.facebook.com/albburtsev">
-						<span class="contact__icon flaticon-facebook29"></span>Facebook
+						<span class="contact__icon flaticon-facebook29"></span><span class="is-no-print">Facebook</span>
+						<span class="is-no-screen">https://www.facebook.com/albburtsev</span>
 					</a>
 				</li>
 				<li class="contact">
 					<a href="http://instagram.com/albburtsev/">
-						<span class="contact__icon flaticon-photos12"></span>Instagram
+						<span class="contact__icon flaticon-photos12"></span><span class="is-no-print">Instagram</span>
+						<span class="is-no-screen">http://instagram.com/albburtsev</span>
 					</a>
 				</li>
 				<li class="contact">
 					<a href="http://www.youtube.com/user/albburtsev">
-						<span class="contact__icon flaticon-youtube17"></span>Youtube+
+						<span class="contact__icon flaticon-youtube17"></span><span class="is-no-print">Youtube+</span>
+						<span class="is-no-screen">http://www.youtube.com/user/albburtsev</span>
 					</a>
 				</li>
-				<li class="contact">
+				<li class="contact is-no-print">
 					<a href="https://plus.google.com/u/0/112730589178585282928/posts">
 						<span class="contact__icon flaticon-social5"></span>Google+
 					</a>
 				</li>
 				<li class="contact">
 					<a href="https://twitter.com/albburtsev">
-						<span class="contact__icon flaticon-social19"></span>Twitter
+						<span class="contact__icon flaticon-social19"></span><span class="is-no-print">Twitter</span>
+						<span class="is-no-screen">https://twitter.com/albburtsev</span>
 					</a>
 				</li>
 			</ul>
