Absolute pathes without protocol

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 
 			<p>Besides, I like to travel. By car, on foot, by plane or by train, across Russia and abroad, in a tent or in a hotel — it doesn't matter. The main thing is to get pleasure from all stages: from planning the trip to returning home in wet boots and with a torn backpack.</p>
 
-			<p>In my spare time I <a href="http://bibla.ru/albburtsev/">read books</a>, <a href="http://myshows.ru/albburtsev">watch TV shows</a> and improve my English. Also I'm a husband and a father.</p>
+			<p>In my spare time I <a href="//bibla.ru/albburtsev/">read books</a>, <a href="//myshows.ru/albburtsev">watch TV shows</a> and improve my English. Also I'm a husband and a father.</p>
 
 			<h3>Education</h3>
 
-			<p>I <a href="http://istina.msu.ru/workers/1580266/">graduated</a> from Moscow State University (Chemical department, 2001 — 2007).
+			<p>I <a href="//istina.msu.ru/workers/1580266/">graduated</a> from Moscow State University (Chemical department, 2001 — 2007).
 		</div>
 	</section>
 
@@ -63,7 +63,7 @@
 			<h2 class="title__head" id="portfolio">Portfolio</h2>
 		</div>
 		<div class="slide__text slide__text_free clearfix">
-			<a class="project" href="http://rememba.ru/" target="_blank">
+			<a class="project" href="//rememba.ru/" target="_blank">
 				<img class="project__image" src="static/i/screenshots/rememba1.min.png" alt="">
 				<span class="project__title">Rememba</span>
 				<span class="project__shutter dark">
@@ -71,7 +71,7 @@
 					My contribution: frontend code of application (Backbone/Marionette) and tests (CasperJS/PhantonCSS).
 				</span>
 			</a>
-			<a class="project" href="http://edox.ru/" target="_blank">
+			<a class="project" href="//edox.ru/" target="_blank">
 				<img class="project__image" src="static/i/screenshots/edox2.min.png" alt="">
 				<span class="project__title">Edox Russia</span>
 				<span class="project__shutter dark">
@@ -79,7 +79,7 @@
 					My contribution: frontend (HTML/CSS, jQuery) and backend (CMS Correct).
 				</span>
 			</a>
-			<a class="project" href="http://www.gcwatches.ru/" target="_blank">
+			<a class="project" href="//www.gcwatches.ru/" target="_blank">
 				<img class="project__image" src="static/i/screenshots/gc1.min.png" alt="">
 				<span class="project__title">GC Watches</span>
 				<span class="project__shutter dark">
@@ -136,12 +136,12 @@
 
 			<h3>Experience</h3>
 
-			<h4><a href="http://mail.ru/">Mail.Ru</a>: 2011 — 2014</h4>
+			<h4><a href="//mail.ru/">Mail.Ru</a>: 2011 — 2014</h4>
 
 			<p>Team lead in maps.mail.ru.</p>
 
 			<ul>
-				<li>Development and support of JavaScript API maps.mail.ru. It's have used in majority projects of the Mail.Ru company. First two versions of JS API were developed from scratch. <a href="http://leafletjs.com/">Leaflet library</a> is taken as the basis of the third (latest) version.</li>
+				<li>Development and support of JavaScript API maps.mail.ru. It's have used in majority projects of the Mail.Ru company. First two versions of JS API were developed from scratch. <a href="//leafletjs.com/">Leaflet library</a> is taken as the basis of the third (latest) version.</li>
 				<li>Web interface development of the maps.mail.ru project (frontend+backend).</li>
 				<li>Development of subway maps, including route planner (frontend+backend).</li>
 				<li>Prepare traffic information before rasterization (backend).</li>
@@ -149,7 +149,7 @@
 				<li>Supervised the developers team and organized the design and development process.</li>
 			</ul>
 
-			<h4><a href="http://mail.ru/">Mail.Ru</a>: 2006 — 2011</h4>
+			<h4><a href="//mail.ru/">Mail.Ru</a>: 2006 — 2011</h4>
 
 			<p>JavaScript-developer of content projects Mail.Ru.</p>
 
@@ -160,22 +160,22 @@
 				<li>Routine tasks: form’s validators and etc.</li>
 			</ul>
 
-			<h4><a href="http://mail.ru/">Mail.Ru</a>: 2005 — 2006</h4>
+			<h4><a href="//mail.ru/">Mail.Ru</a>: 2005 — 2006</h4>
 
 			<p>HTML coder in content projects and mail service.</p>
 
 			<h3>My projects</h3>
 
-			<p>I'm one of the frontend-developers in project <a href="http://rememba.ru/">rememba.ru</a>.</p>
+			<p>I'm one of the frontend-developers in project <a href="//rememba.ru/">rememba.ru</a>.</p>
 
 			<p>jQuery-plugins:</p>
 
 			<ul>
-				<li><a href="https://github.com/albburtsev/jquery.lookingfor">jquery.lookingfor</a> – fast search as you type jQuery-plugin;</li>
-				<li><a href="https://github.com/albburtsev/jquery.typist">jquery.typist</a> – animated text typing.</li>
+				<li><a href="//github.com/albburtsev/jquery.lookingfor">jquery.lookingfor</a> – fast search as you type jQuery-plugin;</li>
+				<li><a href="//github.com/albburtsev/jquery.typist">jquery.typist</a> – animated text typing.</li>
 			</ul>
 
-			<p>I have developed <a href="http://cms-correct.ru/">CMS Correct</a> (PHP/Twig/MySQL). Project was created as a simple tool for deployment of online shops and catalogs.</p>
+			<p>I have developed <a href="//cms-correct.ru/">CMS Correct</a> (PHP/Twig/MySQL). Project was created as a simple tool for deployment of online shops and catalogs.</p>
 		</div>
 	</section>
 
@@ -211,13 +211,13 @@
 				<li class="contact_delim"></li>
 
 				<li class="contact">
-					<a href="http://habrahabr.ru/users/bur/">
+					<a href="//habrahabr.ru/users/bur/">
 						<span class="contact__icon flaticon-hotel75"></span><span class="is-no-print">Habrahabr</span>
 						<span class="is-no-screen">http://habrahabr.ru/users/bur/</span>
 					</a>
 				</li>
 				<li class="contact">
-					<a href="https://github.com/albburtsev">
+					<a href="//github.com/albburtsev">
 						<span class="contact__icon flaticon-github13"></span><span class="is-no-print">Github</span>
 						<span class="is-no-screen">https://github.com/albburtsev</span>
 					</a>
@@ -226,36 +226,36 @@
 				<li class="contact_delim"></li>
 
 				<li class="contact">
-					<a href="https://foursquare.com/user/46356854">
+					<a href="//foursquare.com/user/46356854">
 						<span class="contact__icon flaticon-check59"></span><span class="is-no-print">Foursquare</span>
 						<span class="is-no-screen">https://foursquare.com/user/46356854</span>
 					</a>
 				</li>
 				<li class="contact">
-					<a href="https://www.facebook.com/albburtsev">
+					<a href="//www.facebook.com/albburtsev">
 						<span class="contact__icon flaticon-facebook29"></span><span class="is-no-print">Facebook</span>
 						<span class="is-no-screen">https://www.facebook.com/albburtsev</span>
 					</a>
 				</li>
 				<li class="contact">
-					<a href="http://instagram.com/albburtsev/">
+					<a href="//instagram.com/albburtsev/">
 						<span class="contact__icon flaticon-photos12"></span><span class="is-no-print">Instagram</span>
 						<span class="is-no-screen">http://instagram.com/albburtsev</span>
 					</a>
 				</li>
 				<li class="contact">
-					<a href="http://www.youtube.com/user/albburtsev">
+					<a href="//www.youtube.com/user/albburtsev">
 						<span class="contact__icon flaticon-youtube17"></span><span class="is-no-print">Youtube+</span>
 						<span class="is-no-screen">http://www.youtube.com/user/albburtsev</span>
 					</a>
 				</li>
 				<li class="contact is-no-print">
-					<a href="https://plus.google.com/u/0/112730589178585282928/posts">
+					<a href="//plus.google.com/u/0/112730589178585282928/posts">
 						<span class="contact__icon flaticon-social5"></span>Google+
 					</a>
 				</li>
 				<li class="contact">
-					<a href="https://twitter.com/albburtsev">
+					<a href="//twitter.com/albburtsev">
 						<span class="contact__icon flaticon-social19"></span><span class="is-no-print">Twitter</span>
 						<span class="is-no-screen">https://twitter.com/albburtsev</span>
 					</a>
@@ -271,11 +271,11 @@
 			<span class="footer__icon flaticon-list23 js-footer-icon"></span>
 		</h2>
 		<ul class="footer__list js-footer-list is-hidden">
-			<li class="footer__link"><a href="https://github.com/albburtsev/burtsev.me">Common sense</a></li>
-			<li class="footer__link"><a href="http://coffeescript.org/">CoffeeScript</a></li>
-			<li class="footer__link"><a href="http://learnboost.github.io/stylus/">Stylus</a></li>
-			<li class="footer__link"><a href="http://gruntjs.com/">Grunt</a></li>
-			<li class="footer__link"><a href="http://bower.io/">Bower</a></li>
+			<li class="footer__link"><a href="//github.com/albburtsev/burtsev.me">Common sense</a></li>
+			<li class="footer__link"><a href="//coffeescript.org/">CoffeeScript</a></li>
+			<li class="footer__link"><a href="//learnboost.github.io/stylus/">Stylus</a></li>
+			<li class="footer__link"><a href="//gruntjs.com/">Grunt</a></li>
+			<li class="footer__link"><a href="//bower.io/">Bower</a></li>
 		</ul>
 	</footer>
 	<!--[if gte IE 9]> -->
