--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		</div>
 		<div class="slide__text slide__text_free clearfix">
 			<a class="project" href="//rememba.ru/" target="_blank">
-				<img class="project__image" src="static/i/screenshots/rememba1.min.png" alt="">
+				<img class="project__image" src="static/i/screenshots/rememba.png" alt="">
 				<span class="project__title">Rememba</span>
 				<span class="project__shutter dark">
 					<span class="project__shutter__caption">Application for expanding vocabulary</span>
@@ -72,7 +72,7 @@
 				</span>
 			</a>
 			<a class="project" href="//edox.ru/" target="_blank">
-				<img class="project__image" src="static/i/screenshots/edox2.min.png" alt="">
+				<img class="project__image" src="static/i/screenshots/edox.png" alt="">
 				<span class="project__title">Edox Russia</span>
 				<span class="project__shutter dark">
 					<span class="project__shutter__caption">Edox watches in Russia</span>
@@ -80,7 +80,7 @@
 				</span>
 			</a>
 			<a class="project" href="//www.gcwatches.ru/" target="_blank">
-				<img class="project__image" src="static/i/screenshots/gc1.min.png" alt="">
+				<img class="project__image" src="static/i/screenshots/gc.png" alt="">
 				<span class="project__title">GC Watches</span>
 				<span class="project__shutter dark">
 					<span class="project__shutter__caption">GC Watches in Russia</span>
